@@ -6,6 +6,6 @@ log4j.appender.debug.layout=org.apache.log4j.PatternLayout
 # Pattern to output the caller's file name and line number.
 log4j.appender.debug.layout.ConversionPattern=%5p [%t] %l - %m%n
 
-log4j.logger.dmcsd = debug
-log4j.logger.dmcsc = debug
-log4j.logger.dmcsGen = debug
+log4j.logger.dmcsd = TRACE, debug
+log4j.logger.dmcsc = TRACE, debug
+log4j.logger.dmcsGen = TRACE, debug
